Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,3 +23,15 @@ steps:
     backendAzureRmStorageAccountName: 'stgutbkend'
     backendAzureRmContainerName: 'bkendcontainer'
     backendAzureRmKey: 'terraform.tfstate'
+- task: TerraformTask@5
+  inputs:
+    provider: 'azurerm'
+    command: 'validate'
+
+- task: TerraformTask@5
+  inputs:
+    provider: 'azurerm'
+    command: 'plan'
+    environmentServiceNameAzureRM: 'ServiceConnUT'
+    environmentAzureRmOverrideSubscriptionID: '8b0422c9-d3b4-4ad5-b676-1cd162a61f87'
+
