--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,3 +35,11 @@ steps:
     environmentServiceNameAzureRM: 'ServiceConnUT'
     environmentAzureRmOverrideSubscriptionID: '8b0422c9-d3b4-4ad5-b676-1cd162a61f87'
 
+- task: TerraformTask@5
+  inputs:
+    provider: 'azurerm'
+    command: 'apply'
+    environmentServiceNameAzureRM: 'ServiceConnUT'
+    environmentAzureRmOverrideSubscriptionID: '8b0422c9-d3b4-4ad5-b676-1cd162a61f87'
+
+    
